tried to fix carousel, so it must be working on mobiles. Added new attributes to carousel code, made the arrows dark

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -17,14 +17,6 @@
   margin-left: -50%;
 }
 
-.carousel-control-next-icon,
-.carousel-control-prev-icon {
-  background-color: lightslategray;
-  border: 1px solid lightslategray;
-  border-radius: 20%;
-  padding: 10px;
-}
-
 div.company-slogan-button {
   margin-top: 5%;
   margin-left: -100px;
